--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Sample PWA</title>
-        <link rel="stylesheet" href="/styles.css">
-        <link rel="manifest" href="/manifest.json">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="manifest" href="manifest.json">
     </head>
 
     <body>
