--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Sample PWA</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="manifest" href="manifest.json">
+        <link rel="apple-touch-icon" sizes="192x192" href="images/icons/icon-192x192.png">
     </head>
 
     <body>
